--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -292,6 +292,7 @@ else()
         add_extra_test(dbi)
         add_extra_test(open)
         add_extra_test(txn)
+        add_extra_test(get_cached)
       endif()
       add_extra_test(hex_base64_base58)
     endif()
